...
                        </Text>
                        <SegmentedControl
                            segments={[
                                { value: "space", label: "Space" },
                                { value: "dash", label: "-" },
                                { value: "underscore", label: "_" },
                                { value: "none", label: "None" },
                            ]}
                            value={options.wordSeparator}
                            onChange={(wordSeparator) =>
                                setOption("wordSeparator", wordSeparator)
                            }
                        />
...
