appId: ${CRYPTEX_APP_ID}
---
- openLink: ${CRYPTEX_APP_SCHEME}://
- tapOn: More
- tapOn: Autofill
- assertVisible: Autofill
- runFlow:
    when:
      visible: Cryptex Vault is selected
    commands:
      - tapOn: Password autofill
      - assertVisible: Preferred service( for passwords, passkeys & autofill)?
      - tapOn: None
      - runFlow:
          when:
            visible: Turn off
          commands:
            - tapOn: Turn off
      - back
- scrollUntilVisible:
    element:
      text: Accessibility fallback
    direction: DOWN
- tapOn: Accessibility fallback
- assertVisible: Android gives accessibility services broad access to on-screen controls.*
- runFlow:
    when:
      visible: Continue to Android settings
    commands:
      - tapOn: Continue to Android settings
      - runFlow:
          when:
            visible: Downloaded apps
          commands:
            - tapOn: Downloaded apps
      - tapOn: ${CRYPTEX_APP_NAME} autofill fallback
      - runFlow:
          when:
            visible: Use ${CRYPTEX_APP_NAME} autofill fallback
          commands:
            - tapOn: Use ${CRYPTEX_APP_NAME} autofill fallback
      - runFlow:
          when:
            visible: Allow
          commands:
            - tapOn: Allow
      - back
      - back
- openLink: ${CRYPTEX_APP_SCHEME}://
- tapOn: More
- tapOn: Autofill
- scrollUntilVisible:
    element:
      text: Accessibility fallback
    direction: DOWN
- tapOn: Accessibility fallback
- assertVisible: Review accessibility access
